--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
+* Hide scrollbar for Chrome, Safari, and Opera */
+::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0); /* transparent */
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
